--- a/app.json
+++ b/app.json
@@ -22,6 +22,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "8e4c746f-a665-463e-b83e-5efcb1021afb"
+      }
     }
   }
 }
