--- a/app.json
+++ b/app.json
@@ -13,12 +13,14 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.shinom.approfile"
     },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.shinom.approfile"
     },
     "web": {
       "favicon": "./assets/favicon.png"
